--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,32 +4,37 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.6.1
+  sdk: ^3.5.0
 
 dependencies:
+  dev: ^1.0.0
   file_picker: ^10.0.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.6.1
-  freezed_annotation: ^3.0.0
+  flutter_scalable_ocr: ^2.2.1
+  freezed_annotation: ^2.4.4
   go_router: ^14.8.1
   google_fonts: ^6.2.1
+  google_mlkit_text_recognition: ^0.14.0
   intl: ^0.19.0
   json_annotation: ^4.9.0
+  path: ^1.9.0
   path_provider: ^2.1.5
   phone_form_field: ^10.0.6
   shimmer: ^3.0.0
-  sqflite_common_ffi: ^2.3.5
+  sqflite_common_ffi: ^2.3.0
+  sqlite3_flutter_libs: ^0.5.32
 
 dev_dependencies:
-  build_runner: ^2.4.15
+  build_runner: ^2.4.0
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^3.0.4
-  json_serializable: ^6.9.4
+  freezed: ^2.5.7
+  json_serializable: ^6.0.0
 
 flutter:
   uses-material-design: true
