--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,13 @@ dependencies:
   go_router: ^14.8.1
   google_fonts: ^6.2.1
   google_mlkit_text_recognition: ^0.14.0
+  image_picker: ^1.1.2
   intl: ^0.19.0
   json_annotation: ^4.9.0
   path: ^1.9.0
   path_provider: ^2.1.5
   phone_form_field: ^10.0.6
+  shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   sqflite_common_ffi: ^2.3.0
   sqlite3_flutter_libs: ^0.5.32
