--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   file_picker: ^10.0.0
   flutter:
     sdk: flutter
+  flutter_contacts: ^1.1.9+2
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.6.1
@@ -41,6 +42,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
 
 flutter_launcher_icons:
   android: true
