--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.5
   phone_form_field: ^10.0.6
+  share_plus: ^7.2.1
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   sqflite_common_ffi: ^2.3.0
