--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.5
   phone_form_field: ^10.0.6
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^3.5.7
   share_plus: ^7.2.1
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
