--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,17 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.19.0
   json_annotation: ^4.9.0
+  mobile_scanner: ^3.5.7
   path: ^1.9.0
   path_provider: ^2.1.5
   phone_form_field: ^10.0.6
   qr_flutter: ^4.1.0
-  mobile_scanner: ^3.5.7
   share_plus: ^7.2.1
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   sqflite_common_ffi: ^2.3.0
   sqlite3_flutter_libs: ^0.5.32
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.4.0
